--- a/ryzebank/src/app/extrato/extrato.component.html
+++ b/ryzebank/src/app/extrato/extrato.component.html
@@ -4,7 +4,7 @@
     <th class="tabela__cabecalho__conteudo">Valor</th>
     <th class="tabela__cabecalho__conteudo">Destino</th>
   </thead>
-  <tbody>
+  <tbody *ngIf="transferencias.length > 0; else listaVazia">
     <tr *ngFor="let transferencia of transferencias" class="tabela__linha">
       <td class="tabela__conteudo">{{ transferencia.data | date: "short" }}</td>
       <td class="tabela__conteudo">
@@ -14,3 +14,6 @@
     </tr>
   </tbody>
 </table>
+<ng-template #listaVazia>
+  <p>Nenhuma operação cadastrada</p>
+</ng-template>
